crates/snow-lexer/tests/snapshots/lexer_tests__comments.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Comment
  text: "# line comment"
  span:
    - 0
    - 14
- kind: Newline
  text: "\n"
  span:
    - 14
    - 15
- kind: DocComment
  text: "## doc comment"
  span:
    - 15
    - 29
- kind: Newline
  text: "\n"
  span:
    - 29
    - 30
- kind: ModuleDocComment
  text: "##! module doc comment"
  span:
    - 30
    - 52
- kind: Newline
  text: "\n"
  span:
    - 52
    - 53
- kind: Comment
  text: "#= block comment =#"
  span:
    - 53
    - 72
- kind: Newline
  text: "\n"
  span:
    - 72
    - 73
- kind: Comment
  text: "#= nested #= inner =# outer =#"
  span:
    - 73
    - 103
- kind: Newline
  text: "\n"
  span:
    - 103
    - 104
- kind: Ident
  text: x
  span:
    - 104
    - 105
- kind: Eq
  text: "="
  span:
    - 106
    - 107
- kind: IntLiteral
  text: "1"
  span:
    - 108
    - 109
- kind: Comment
  text: "# inline comment"
  span:
    - 110
    - 126
- kind: Newline
  text: "\n"
  span:
    - 126
    - 127
- kind: Eof
  text: ""
  span:
    - 127
    - 127
