crates/snow-lexer/tests/snapshots/lexer_tests__empty_input.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Eof
  text: ""
  span:
    - 0
    - 0
