crates/snow-lexer/tests/snapshots/lexer_tests__empty_string.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: StringStart
  text: "\""
  span:
    - 0
    - 1
- kind: StringEnd
  text: "\""
  span:
    - 1
    - 2
- kind: Eof
  text: ""
  span:
    - 2
    - 2
