crates/snow-lexer/tests/snapshots/lexer_tests__identifiers.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Ident
  text: x
  span:
    - 0
    - 1
- kind: Ident
  text: foo
  span:
    - 2
    - 5
- kind: Ident
  text: bar_baz
  span:
    - 6
    - 13
- kind: Ident
  text: _private
  span:
    - 14
    - 22
- kind: Ident
  text: camelCase
  span:
    - 23
    - 32
- kind: Ident
  text: PascalCase
  span:
    - 33
    - 43
- kind: Ident
  text: x1
  span:
    - 44
    - 46
- kind: Ident
  text: _
  span:
    - 47
    - 48
- kind: Eof
  text: ""
  span:
    - 49
    - 49
